--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <com.inscripts.cometchatpulse.demo.CustomView.CircleImageView
+            <com.unilever.go.walls.CustomView.CircleImageView
                 android:id="@+id/contact_pic"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
