--- a/app/src/main/res/layout/activity_video_view.xml
+++ b/app/src/main/res/layout/activity_video_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/video_background"
-    tools:context="com.inscripts.cometchatpulse.demo.Activity.VideoViewActivity">
+    tools:context="com.unilever.go.walls.Activity.VideoViewActivity">
 
 
     <VideoView
