--- a/app/src/main/res/layout/cc_audionote_layout_left.xml
+++ b/app/src/main/res/layout/cc_audionote_layout_left.xml
@@ -7,7 +7,7 @@
     android:padding="8dp">
 
 
-    <com.inscripts.cometchatpulse.demo.CustomView.CircleImageView
+    <com.unilever.go.walls.CustomView.CircleImageView
         android:id="@+id/imgAvatar"
         android:layout_width="24dp"
         android:layout_height="24dp"
