--- a/app/src/main/res/layout/cc_text_layout_right.xml
+++ b/app/src/main/res/layout/cc_text_layout_right.xml
@@ -51,7 +51,7 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.25" />
 
-    <com.inscripts.cometchatpulse.demo.CustomView.CircleImageView
+    <com.unilever.go.walls.CustomView.CircleImageView
         android:id="@+id/img_message_status"
         android:layout_width="10dp"
         android:layout_height="10dp"
