--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -24,7 +24,7 @@
             android:visibility="gone"
             android:src="@drawable/cc_ic_group" />
 
-        <com.inscripts.cometchatpulse.demo.CustomView.CircleImageView
+        <com.unilever.go.walls.CustomView.CircleImageView
             android:id="@+id/imageViewUserAvatar"
             android:layout_width="45dp"
             android:layout_height="45dp"
