--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -1,6 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="#ffffff"
+    android:orientation="vertical"
+    android:weightSum="10"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:id="@+id/linearHeader"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="@dimen/size_frthsnd_normal"
+        android:paddingTop="@dimen/sell_size_twnty_normal"
+        android:background="@drawable/home_header_red_round"
+        >
 
+        <ImageView
+            android:id="@+id/imgUserHome"
+            android:layout_width="@dimen/sell_size_svtyfv_normal"
+            android:layout_height="@dimen/sell_size_svtyfv_normal"
+            android:layout_marginBottom="19dp"
+            android:background="@drawable/border_oval"
+            android:src="@drawable/oval" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sell_size_frteen_sp_normal"
+            android:textColor="#ffffff"
+            android:text="Lindsey Ryan!"
+            android:layout_marginBottom="@dimen/sell_size_four_normal"
+            android:id="@+id/txtHomeHeaderGreet2" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sell_size_ten_sp_normal"
+            android:textColor="#ffffff"
+            android:lineSpacingExtra="5sp"
+            android:text="Engineer - Jakarta"
+            android:id="@+id/txtHomeHeaderLocation"
+            />
+    </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:text="My Profile"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="@dimen/sell_size_thrty_normal"
+        android:paddingBottom="@dimen/size_svteen_normal"
+        android:paddingTop="@dimen/size_svteen_normal"
+        android:layout_marginLeft="@dimen/sell_size_thrty_normal"
+        android:background="@drawable/border_abu_abu_bawah"
+        android:textSize="@dimen/size_svteen_sp_normal"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:text="About Go-walls"
+        android:layout_marginRight="@dimen/sell_size_thrty_normal"
+        android:paddingBottom="@dimen/size_svteen_normal"
+        android:paddingTop="@dimen/size_svteen_normal"
+        android:layout_marginLeft="@dimen/sell_size_thrty_normal"
+        android:background="@drawable/border_abu_abu_bawah"
+        android:textSize="@dimen/size_svteen_sp_normal"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:text="Contact Us"
+        android:layout_marginRight="@dimen/sell_size_thrty_normal"
+        android:paddingBottom="@dimen/size_svteen_normal"
+        android:paddingTop="@dimen/size_svteen_normal"
+        android:layout_marginLeft="@dimen/sell_size_thrty_normal"
+        android:background="@drawable/border_abu_abu_bawah"
+        android:textSize="@dimen/size_svteen_sp_normal"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:text="Sign Out"
+        android:id="@+id/logout"
+        android:layout_marginRight="@dimen/sell_size_thrty_normal"
+        android:paddingBottom="@dimen/size_svteen_normal"
+        android:paddingTop="@dimen/size_svteen_normal"
+        android:layout_marginLeft="@dimen/sell_size_thrty_normal"
+        android:background="@drawable/border_abu_abu_bawah"
+        android:textSize="@dimen/size_svteen_sp_normal"
+        android:layout_height="wrap_content"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:id="@+id/relativeHomeMenu"
+            android:layout_height="@dimen/size_nnty_normal"
+            android:background="@android:color/transparent"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:weightSum="10">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_height="3dp"
+                android:layout_marginTop="12dp"
+                android:layout_width="match_parent"
+                android:background="@drawable/shadow_top"/>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:background="#fff"
+                android:layout_marginTop="16dp"
+                android:gravity="center">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="5"
+                    android:gravity="center">
+                    <ImageView
+                        android:id="@+id/imgHomeCalendar"
+                        android:paddingTop="@dimen/sell_size_one_normal"
+                        android:layout_height="@dimen/sell_size_twnty_normal"
+                        android:layout_width="0dp"
+                        android:layout_weight="5"
+                        android:layout_marginLeft="@dimen/sell_size_thrtytw_normal"
+                        android:src="@drawable/calendar_idle" />
+                    <ImageView
+                        android:id="@+id/imgHomeCamera"
+                        android:layout_height="@dimen/sell_size_twnty_normal"
+                        android:layout_width="0dp"
+                        android:layout_marginRight="@dimen/sell_size_thrtytw_normal"
+                        android:layout_weight="5"
+                        android:src="@drawable/camera_idle" />
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="5"
+                    android:gravity="center">
+                    <LinearLayout
+                        android:layout_height="@dimen/sell_size_twnty_normal"
+                        android:layout_width="0dp"
+                        android:layout_weight="5"
+                        android:gravity="center"
+                        android:layout_marginLeft="@dimen/sell_size_thrtytw_normal"
+                        >
+                        <RelativeLayout
+                            android:layout_height="@dimen/sell_size_twnty_normal"
+                            android:layout_width="30dp"
+                            android:id="@+id/relativeHomeMessage"
+                            android:paddingTop="@dimen/sell_size_onefv_normal"
+                            >
+                            <ImageView
+                                android:id="@+id/imgHomeMessage"
+                                android:layout_height="match_parent"
+                                android:layout_width="match_parent"
+                                android:src="@drawable/message_idle"/>
+                            <View
+                                android:background="@drawable/oval_fill_red"
+                                android:layout_height="6dp"
+                                android:layout_alignParentRight="true"
+                                android:layout_width="6dp"
+                                android:id="@+id/indicatorHomeMessage"
+                                />
+                        </RelativeLayout>
+                    </LinearLayout>
+                    <ImageView
+                        android:id="@+id/imgHomeProfil"
+                        android:paddingTop="@dimen/sell_size_one_normal"
+                        android:layout_height="@dimen/sell_size_twnty_normal"
+                        android:layout_width="0dp"
+                        android:layout_weight="5"
+                        android:layout_marginRight="@dimen/sell_size_thrtytw_normal"
+                        android:src="@drawable/account_idle"/>
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/round_walls_button"
+                android:layout_width="@dimen/sell_size_sxtyfv_normal"
+                android:layout_height="match_parent"
+                android:id="@+id/btnHomeWalls"
+                android:gravity="center">
+                <ImageView
+                    android:id="@+id/imgWalls"
+                    android:layout_height="@dimen/sell_size_frtyfr_normal"
+                    android:layout_width="@dimen/sell_size_fvtyfv_normal"
+                    android:layout_marginTop="2dp"
+                    android:src="@drawable/fill_14_copy_2"/>
+            </LinearLayout>
+        </RelativeLayout>
+    </RelativeLayout>
 </LinearLayout>
