--- a/app/src/main/res/layout/right_reply.xml
+++ b/app/src/main/res/layout/right_reply.xml
@@ -220,7 +220,7 @@
 
     </RelativeLayout>
 
-    <com.inscripts.cometchatpulse.demo.CustomView.CircleImageView
+    <com.unilever.go.walls.CustomView.CircleImageView
         android:id="@+id/messageStatus"
         android:layout_width="10dp"
         android:layout_height="10dp"
