--- a/app/src/main/res/layout/cc_audionote_layout_right.xml
+++ b/app/src/main/res/layout/cc_audionote_layout_right.xml
@@ -68,7 +68,7 @@
         android:textColor="@android:color/white"
         tools:text="00:00" />
 
-    <com.inscripts.cometchatpulse.demo.CustomView.CircleImageView
+    <com.unilever.go.walls.CustomView.CircleImageView
         android:id="@+id/messageStatus"
         android:layout_width="10dp"
         android:layout_height="10dp"
