--- a/app/src/main/res/layout/cc_text_layout_left.xml
+++ b/app/src/main/res/layout/cc_text_layout_left.xml
@@ -42,7 +42,7 @@
         app:layout_constraintWidth_default="wrap"
         tools:text="Message" />
 
-    <com.inscripts.cometchatpulse.demo.CustomView.CircleImageView
+    <com.unilever.go.walls.CustomView.CircleImageView
         android:id="@+id/imgAvatar"
         android:layout_width="35dp"
         android:layout_height="35dp"
