--- a/app/src/main/res/layout/fragment_member_list.xml
+++ b/app/src/main/res/layout/fragment_member_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.inscripts.cometchatpulse.demo.Fragments.MemberListFragment">
+    tools:context="com.unilever.go.walls.Fragments.MemberListFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_member"
