--- a/app/src/main/res/layout/fragment_outcast_member_list.xml
+++ b/app/src/main/res/layout/fragment_outcast_member_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.inscripts.cometchatpulse.demo.Fragments.MemberListFragment">
+    tools:context="com.unilever.go.walls.Fragments.MemberListFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_member"
