--- a/app/src/main/res/layout/group_member_item.xml
+++ b/app/src/main/res/layout/group_member_item.xml
@@ -10,7 +10,7 @@
     style="@style/SelectableItemBackground">
 
 
-    <com.inscripts.cometchatpulse.demo.CustomView.CircleImageView
+    <com.unilever.go.walls.CustomView.CircleImageView
         android:id="@+id/imageViewUserAvatar"
         android:layout_width="35dp"
         android:layout_height="35dp"
