--- a/app/src/main/res/layout/left_file_layout.xml
+++ b/app/src/main/res/layout/left_file_layout.xml
@@ -7,7 +7,7 @@
     android:padding="8dp">
 
 
-    <com.inscripts.cometchatpulse.demo.CustomView.CircleImageView
+    <com.unilever.go.walls.CustomView.CircleImageView
         android:id="@+id/imgAvatar"
         android:layout_width="35dp"
         android:layout_height="35dp"
