--- a/app/src/main/res/layout/left_reply.xml
+++ b/app/src/main/res/layout/left_reply.xml
@@ -19,7 +19,7 @@
         android:textSize="@dimen/small_text"
         tools:text="10:00 AM" />
 
-    <com.inscripts.cometchatpulse.demo.CustomView.CircleImageView
+    <com.unilever.go.walls.CustomView.CircleImageView
         android:id="@+id/ivContact"
         android:layout_width="24dp"
         android:layout_height="24dp"
