--- a/app/src/main/res/layout/right_file_layout.xml
+++ b/app/src/main/res/layout/right_file_layout.xml
@@ -28,7 +28,7 @@
         app:layout_constraintGuide_percent="0.4" />
 
 
-    <com.inscripts.cometchatpulse.demo.CustomView.CircleImageView
+    <com.unilever.go.walls.CustomView.CircleImageView
         android:id="@+id/messageStatus"
         android:layout_width="12dp"
         android:layout_height="12dp"
