--- a/app/src/main/res/layout/activity_comet_chat.xml
+++ b/app/src/main/res/layout/activity_comet_chat.xml
@@ -4,41 +4,42 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#66000000"
+    android:background="#ffffff"
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
+        android:background="#fff"
         android:layout_height="wrap_content">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/primaryLightColor"
-                app:layout_scrollFlags="enterAlways|scroll">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#ffffff"
+            app:layout_scrollFlags="enterAlways|scroll">
 
-                <ImageView
-                    android:id="@+id/toolbar_title"
-                    android:layout_width="120dp"
-                    android:layout_height="35dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/cc_name"
-                    android:scaleType="fitCenter"/>
+            <ImageView
+                android:id="@+id/toolbar_title"
+                android:layout_width="120dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:src="@drawable/goicon"
+                android:scaleType="fitCenter"/>
 
-            </android.support.v7.widget.Toolbar>
+        </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#ff0057"
             app:tabGravity="fill"
             app:tabMode="fixed"
-            android:background="@color/primaryLightColor"
             app:tabPadding="10dp"
             app:tabRippleColor="@color/secondaryDarkColor"
-            app:tabSelectedTextColor="@color/primaryTextColor"
+            app:tabSelectedTextColor="#ffffff"
             app:tabTextColor="@color/primaryDarkColor" />
 
     </android.support.design.widget.AppBarLayout>
