--- a/app/src/main/res/layout/termscondition.xml
+++ b/app/src/main/res/layout/termscondition.xml
@@ -1,6 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="#ffffff"
+    android:orientation="vertical"
+    android:weightSum="10"
     android:layout_height="match_parent">
-
+    <LinearLayout
+        android:id="@+id/linearHeader"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/size_egtyth_normal"
+        android:paddingTop="@dimen/sell_size_twfive_normal"
+        android:paddingLeft="@dimen/sell_size_twfive_normal"
+        android:paddingRight="@dimen/sell_size_twnty_normal"
+        android:background="@drawable/home_header_red_round"
+        >
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="8"
+            android:layout_height="match_parent"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:text="Terms &amp; Condition"
+            android:textSize="@dimen/size_twntytw_sp_normal"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="match_parent"
+            android:textColor="#ffffff"
+            android:text="Close"
+            android:id="@+id/close"
+            android:textSize="@dimen/size_twntytw_sp_normal"/>
+    </LinearLayout>
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="8"
+                android:text="TERMS OF USE"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="@dimen/sell_size_thrty_normal"
+                android:paddingBottom="@dimen/size_svteen_normal"
+                android:paddingTop="@dimen/size_svteen_normal"
+                android:layout_marginLeft="@dimen/sell_size_thrty_normal"
+                android:background="@drawable/border_abu_abu_bawah"
+                android:textSize="@dimen/size_svteen_sp_normal"
+                android:layout_height="wrap_content"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="match_parent"
+                android:layout_marginRight="@dimen/sell_size_thrtytw_normal"
+                android:src="@drawable/goicon" />
+        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:text="TERMS OF USE BELOW MUST BE READ BEFORE USING THIS APP. THE USAGE OF THIS APP INDICATES ACCEPTANCE OF THE TERMS AND CONDITIONS BELOW.\n\nWhen I was just starting 6th grade I got my first job. Paperboy! Boy, was I excited. At that time I had spent a lot of time actually playing the video game Paperboy, so I knew I had what it took to get the job done. But, its just not that easy.\n\nThe StarTribune doesn’t just hand out the responsibility of informing their community’s citizenry on a daily basis to just any fool that says they’d like a shot at paper delivery greatness. Nope, I had to interview for this job. And I tell you, I was magnificent, so much so that, as you know, I got the position. Upon completion of the interview the gentleman that was to give me my first opportunity at financial freedom stood up from my dining room table, walked to the front door and with a smile and a handshake, was off into the darkness.\n\nMoments later, I noticed that the kindly gentleman had accidentally left his pen. It was beautiful, embossed with the StarTribune logo and all. I grabbed it and ran to the front door, but he was gone. It was at that moment that I received my first lesson in advertising specialties.\n\nCertainly at that point I was not a potential client for the Strib, but promotional advertising specialties are not just about making a sale. Logo distribution and brand recognition are an integral component to building a company and its client base. So, just to get the promotional product out there and off the shelf is an important part of the overall goal.\n\nI think that I lost the pen sometime that week, but I’ll never forget the lesson of promotional advertising specialties that I learned from the man that gave me my first god-awful, thankless job."
+            android:layout_marginRight="@dimen/sell_size_thrty_normal"
+            android:paddingBottom="@dimen/size_svteen_normal"
+            android:paddingTop="@dimen/size_svteen_normal"
+            android:gravity="left"
+            android:layout_marginLeft="@dimen/sell_size_thrty_normal"
+            android:background="@drawable/border_abu_abu_bawah"
+            android:textSize="@dimen/sell_size_twelve_sp_normal"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
