--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -10,16 +10,16 @@
         app:showAsAction="always"
         app:actionViewClass="android.support.v7.widget.SearchView" />
 
-    <item android:title="View Profile"
-        app:showAsAction="never"
-        android:id="@+id/menu_settings"/>
+<!--    <item android:title="View Profile"-->
+<!--        app:showAsAction="never"-->
+<!--        android:id="@+id/menu_settings"/>-->
 
-    <item android:title="Log out"
-        android:id="@+id/menu_log_out"
-        app:showAsAction="never" />
+<!--    <item android:title="Log out"-->
+<!--        android:id="@+id/menu_log_out"-->
+<!--        app:showAsAction="never" />-->
 
-    <item android:title="Blocked User"
-        android:id="@+id/menu_blocked_user"
-        app:showAsAction="never"/>
+<!--    <item android:title="Blocked User"-->
+<!--        android:id="@+id/menu_blocked_user"-->
+<!--        app:showAsAction="never"/>-->
 
 </menu>
