--- a/app/src/main/res/layout/view_image.xml
+++ b/app/src/main/res/layout/view_image.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
+        android:background="#000000"
         android:layout_height="match_parent">
     <ImageView
         android:layout_width="match_parent"
