--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,13 +4,13 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/primaryColor</item>
-        <item name="colorPrimaryDark">@color/primaryDarkColor</item>
+        <item name="colorPrimaryDark">@color/secondaryColor</item>
         <item name="colorAccent">@color/secondaryColor</item>
         <item name="colorControlHighlight">@color/secondaryDarkColor</item>
-        <item name="android:textColorSecondary">@color/primaryTextColor</item>
+        <item name="android:textColorSecondary">@color/secondaryColor</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_arrow_back_black_24dp</item>
         <item name="android:colorEdgeEffect">@color/secondaryDarkColor</item>
-        <item name="actionModeBackground">@color/shimmer_background</item>
+        <item name="actionModeBackground">@color/secondaryColor</item>
         <item name="windowActionModeOverlay">true</item>
         <item name="dialogCornerRadius">15dp</item>
     </style>
